--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -47,3 +47,8 @@ table.entityList td {
 .w-20 {
     width: 20% !important;
 }
+.bg-my-login-image {
+    background:url(../img/back.jpg);
+    background-position:center;
+    background-size:cover;
+}
